<resources>
    <string name="app_name">Material Messenger</string>
    <string name="sign_up">SIGN UP</string>
    <string name="don_t_have_an_account">Don\'t have an account?</string>
    <string name="username">Username</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="phone_number">Phone Number</string>
    <string name="btn_yes">Yes</string>
    <string name="btn_no">No</string>
    <string name="name">Name</string>
    <string name="people">People</string>
    <string name="setting">Settings</string>
    <string name="input_message">Input message</string>
    <string name="take_an_image">Take an image</string>
    <string name="choose_from_gallery">Choose from gallery</string>
    <string name="delete_image">Delete image</string>
    <string name="cancel">Cancel</string>
    <string name="dont_find_image">Can not find image crop app.</string>
    <string name="not_support_crop">This device doesn\'t support the crop action!</string>
    <string name="deny_read_storage">Read External Storage permission denied</string>
    <string name="deny_camera">Camera permission denied.\n\nPlease change app permissions on phone settings.</string>
</resources>