<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:gravity="center_horizontal"
    android:padding="30dp"
    android:orientation="vertical">

    <TextView
        android:id="@+id/btnCaptureImage"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="@drawable/corner_blue_20dp"
        android:text="@string/take_an_image"
        android:textSize="@dimen/text_size_xxsmall"
        android:textColor="@color/colorWhite"
        android:gravity="center"/>

    <TextView
        android:id="@+id/btnChooseImageGallery"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="@drawable/corner_blue_20dp"
        android:text="@string/choose_from_gallery"
        android:textSize="@dimen/text_size_xxsmall"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="10dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/btnClearImage"
        android:layout_width="250dp"
        android:layout_height="50dp"
        android:background="@drawable/corner_blue_20dp"
        android:text="@string/delete_image"
        android:textSize="@dimen/text_size_xxsmall"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="10dp"
        android:gravity="center"/>

    <TextView
        android:id="@+id/btnCancelChangeImage"
        android:layout_width="100dp"
        android:layout_height="50dp"
        android:background="@drawable/corner_red_20dp"
        android:text="@string/cancel"
        android:textSize="@dimen/text_size_xxsmall"
        android:textColor="@color/colorWhite"
        android:layout_marginTop="10dp"
        android:gravity="center"/>

</LinearLayout>