<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:paddingVertical="20dp"
    android:background="@color/colorWhite"
    android:id="@+id/registerParentView"
    android:paddingHorizontal="20dp">

    <TextView
        android:id="@+id/signupLabel"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="Sign Up"
        android:fontFamily="@font/owl_cute"
        android:textSize="100dp"
        android:textColor="@color/colorBlurBlue"
        app:layout_constraintTop_toTopOf="parent"
        android:gravity="center_horizontal"/>

    <EditText
        android:id="@+id/edtUsername_signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="50dp"
        android:textSize="20sp"
        android:paddingVertical="10dp"
        android:paddingHorizontal="20dp"
        android:maxLines="1"
        android:singleLine="true"
        android:hint="@string/username"
        android:background="@drawable/corner_white_10dp"
        app:layout_constraintTop_toBottomOf="@id/signupLabel"/>

    <EditText
        android:id="@+id/edtEmail_signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:paddingVertical="10dp"
        android:paddingHorizontal="20dp"
        android:maxLines="1"
        android:singleLine="true"
        android:hint="@string/email"
        android:background="@drawable/corner_white_10dp"
        app:layout_constraintTop_toBottomOf="@id/edtUsername_signUp"/>

    <EditText
        android:id="@+id/edtPassword_signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:paddingVertical="10dp"
        android:paddingHorizontal="20dp"
        android:maxLines="1"
        android:singleLine="true"
        android:inputType="textPassword"
        android:hint="@string/password"
        android:background="@drawable/corner_white_10dp"
        app:layout_constraintTop_toBottomOf="@id/edtEmail_signUp"/>

    <EditText
        android:id="@+id/edtPhoneNumber_signUp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:textSize="20sp"
        android:paddingVertical="10dp"
        android:paddingHorizontal="20dp"
        android:maxLines="1"
        android:singleLine="true"
        android:inputType="number"
        android:hint="@string/phone_number"
        android:background="@drawable/corner_white_10dp"
        app:layout_constraintTop_toBottomOf="@id/edtPassword_signUp"/>


    <TextView
        android:id="@+id/btnRegister_signUp"
        android:layout_width="100dp"
        android:layout_height="40dp"
        app:layout_constraintTop_toBottomOf="@id/edtPhoneNumber_signUp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:layout_marginTop="20dp"
        android:text="@string/sign_up"
        android:gravity="center"
        android:textSize="15sp"
        android:textColor="@color/colorWhite"
        android:background="@drawable/corner_blue_20dp"/>

</androidx.constraintlayout.widget.ConstraintLayout>